# TJira

./: .env.example  .gitignore  CHANGELOG.md  ESTRUCTURA_CSV.md  LICENSE  README.md  config.py  imputacion_26mar_09abr.md  jira_client.py  list_tasks.py  log_hours.py  pyproject.toml  requirements.txt  update_task.py  upload_golden_test.py
.claude/: settings.json
.claude/hooks/: tjira-timer-hook.sh
.github/workflows/: ci.yml
legacy/: README.md  config.py  create_task.py  delete_worklogs.py  import_worklogs.py  jira_client.py
tests/: conftest.py  test_claude_hook.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_formatters.py  test_overlap.py  test_profile_cmd.py  test_profile_store.py  test_timer_cmd.py  test_timer_store.py  test_tz.py
tests/e2e/: test_real_jira.py  test_subprocess_mock.py
tjira/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  formatters.py  overlap.py  profiles.py  timer.py  tz.py
tjira.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tjira/commands/: doctor.py  issue.py  list_cmd.py  log.py  profile.py  switch.py  timer.py  worklog.py
tjira_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py
tjira_cli/commands/: issue.py  list_cmd.py  log.py  worklog.py
