[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tjira"
version = "0.1.0"
description = "CLI unificado para gestionar Jira via REST con output JSON AI-friendly"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tincke10" }]
keywords = ["jira", "cli", "worklog", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.24",
    "ruff>=0.4",
]

[project.scripts]
tjira = "tjira.cli:app"

[project.urls]
Homepage = "https://github.com/tincke10/JiraGestionREST"
Issues = "https://github.com/tincke10/JiraGestionREST/issues"

[tool.setuptools.packages.find]
include = ["tjira*"]
exclude = ["tests*", "legacy*"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["legacy", "build", "dist", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
