[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tjira"
version = "0.1.0"
description = "CLI unificado para gestionar Jira via REST con output JSON AI-friendly"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "tincke10" }]
keywords = ["jira", "cli", "worklog", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.5",
    "tomli-w>=1.0.0",
    "typer>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "responses>=0.26.0",
    "ruff>=0.15.0",
]

[project.scripts]
tjira = "tjira.cli:app"

[project.urls]
Homepage = "https://github.com/tincke10/JiraGestionREST"
Issues = "https://github.com/tincke10/JiraGestionREST/issues"

[tool.setuptools.packages.find]
include = ["tjira*"]
exclude = ["tests*", "legacy*"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["legacy", "build", "dist", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
